--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
           <a href="#top">
             <img
               class="text-center"
-              src="media/Logo-Sepia-Honu.JPG"
-              alt="sepia and rainbow colored turtle by R.A.Myers"
+              src="media/rnbw-turtle-512.jpg"
+              alt="rainbow colored turtle by R.A.Myers"
 
-              width="44"
-              height="48"
+              width="128em"
+              height="128em"
               class="d-inline-block align-text-top"></a>
             Welcome...
           </a>
@@ -108,6 +108,29 @@
         </div>
       </nav>
 <body>
-    <ht>Hello World</ht>
+<div class="ccontainer mt-5 p-5">
+    <div class="row"
+<div class="mt-5 p-5 col-md-12 bg-light">
+    <h1 class="text-center">Hello World</h1>
+</div></div></div>
+
+<div class="ccontainer mt-5 p-5">
+    <div class="row">
+    <div class="col-md-12 bg-light">
+    <footer class="footer; m-4 p-4">
+        <h2 class="text-center" style="color: brown; font-size: 2rem;">&#169 R.A. Myers 2022</h2>
+        <h3 class="text-white text-center">Curious to learn more about coding like this?</h3><a href="https://bitwiseindustries.com/services/workforce-training/classes/" target="_blank"><h3 class="text-white  text-center" >Checkout BitWise</h3></a>
+    </footer>
+</div></div></div>
+  
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+
+</html>
+
+
 </body>
 </html>
