--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
         </div>
       </nav>
 <body>
-<div class="ccontainer mt-5 p-5">
-    <div class="row"
+<div class="ccontainer-fluid mt-5 p-5">
+    <div class="row"></div>
 <div class="mt-5 p-5 col-md-12 bg-light">
     <h1 class="text-center">Hello World</h1>
 </div></div></div>
 
-<div class="ccontainer mt-5 p-5">
+<div class="ccontainer-fluid mt-5 p-5">
     <div class="row">
     <div class="col-md-12 bg-light">
     <footer class="footer; m-4 p-4">
